[package]
name = "workspace"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
console = "0.16.2"
dialoguer = "0.12.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
